--- a/Website/budget.html
+++ b/Website/budget.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Lidar</title>
+		<title>Budget</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -52,9 +52,9 @@
 
                                  <!--Table--> 
                                     <section class="box">
-                                        <h3>Table</h3>
+                                        <h3>BOM</h3>
 
-                                        <h4>Default</h4>
+                                        <h4></h4>
                                         <div class="table-wrapper">
                                             <table>
                                                 <thead>
@@ -149,7 +149,7 @@
                                                         <td>Plywood (.125"x12"x12")</td>
                                                         <td>N/A</td>
                                                         <td>1</td>
-                                                        <td>.99</td>
+                                                        <td>0.99</td>
                                                     </tr>
                                                     <tr>
                                                         <td>Plywood (.25"x12"x12")</td>
@@ -167,7 +167,7 @@
                                                         <td>2x4 Lumber (48")</td>
                                                         <td>N/A</td>
                                                         <td>1</td>
-                                                        <td>.99</td>
+                                                        <td>0.99</td>
                                                     </tr>
                                                     <tr>
                                                         <td>3/8" Shaft Collar</td>
@@ -334,7 +334,7 @@
                                                         <td></td>
                                                         <td>Total Price</td>
                                                         <td></td>
-                                                        <td>1000000</td>
+                                                        <td>775.20</td>
                                                     </tr>
                                             </table>
                                         </div>
